Fixing overflow on homepage quotes block causing scrollbars.

--- a/www/sites/all/themes/backdropcms/css/layout.css
+++ b/www/sites/all/themes/backdropcms/css/layout.css
@@ -11,6 +11,10 @@ p {
   font-size:100%;
 }
 
+#main-wrapper {
+  overflow: hidden;
+}
+
 #page {
   position: relative;
   text-align: left;
